--- a/src/index.scss
+++ b/src/index.scss
@@ -30,6 +30,9 @@ body {
 .justify-content-center {
   justify-content: center;
 }
+.text-center {
+  text-align: center;
+}
 
 button {
   border: 0;
