changing word displaying

--- a/src/index.scss
+++ b/src/index.scss
@@ -9,6 +9,7 @@
   --color-light: rgba(190, 190, 190, 1);
   --color-yellow: rgba(250, 214, 72, 1);
   --color-success: rgba(5, 161, 85, 1);
+  --color-lightgreen: rgb(101, 217, 161);
   --color-grey: rgba(255, 255, 255, 0.25);
   --color-danger: #cf2b02;
   --font: "Roboto", sans-serif;
