--- a/src/index.scss
+++ b/src/index.scss
@@ -31,6 +31,9 @@ body {
 .justify-content-center {
   justify-content: center;
 }
+.align-center {
+  align-items: center;
+}
 .text-center {
   text-align: center;
 }
