--- a/src/index.scss
+++ b/src/index.scss
@@ -44,7 +44,7 @@ body {
 button {
   border: 0;
   cursor: pointer;
-  display: block;
+  display: inline-block;
   outline: none;
   margin: 0;
   padding: 0;
